--- a/package.json
+++ b/package.json
@@ -2,5 +2,12 @@
     "name": "healthcheck-express",
     "version": "0.0.1",
     "description": "",
-    "license": "MIT"
+    "license": "MIT",
+    "dependencies": {
+        "express": "^4.17.1",
+        "inversify": "^5.0.5"
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.11"
+    }
 }
