--- a/package.json
+++ b/package.json
@@ -3,11 +3,24 @@
     "version": "0.0.1",
     "description": "",
     "license": "MIT",
+    "scripts": {
+        "build": "tsc",
+        "clean": "rm -r build",
+        "start": "node build/app.js",
+        "test": "jest"
+    },
     "dependencies": {
         "express": "^4.17.1",
-        "inversify": "^5.0.5"
+        "inversify": "^5.0.5",
+        "jest": "^26.6.3",
+        "reflect-metadata": "^0.1.13",
+        "supertest": "^6.1.1",
+        "ts-jest": "^26.4.4",
+        "typescript": "^4.1.3"
     },
     "devDependencies": {
-        "@types/express": "^4.17.11"
+        "@types/express": "^4.17.11",
+        "@types/jest": "^26.0.20",
+        "@types/supertest": "^2.0.10"
     }
 }
